Did a lot of work on new `mods` list var